fix: Correct render.yaml syntax

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: laravel-backend
-    runtime: php
+    env: php
     rootDir: ./portfolio-app
     buildCommand: |
       composer install --no-dev --optimize-autoloader
