--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: laravel-backend
-    env: php
+    runtime: php
     rootDir: ./portfolio-app
     buildCommand: |
       composer install --no-dev --optimize-autoloader
@@ -11,39 +11,39 @@ services:
     envVars:
       - key: APP_URL
         fromService:
-          type: web
+          type: static
           name: react-frontend
           property: url
       - key: DB_CONNECTION
         value: pgsql
       - key: DB_HOST
         fromService:
-          type: pserv
+          type: psql
           name: database
           property: host
       - key: DB_PORT
         fromService:
-          type: pserv
+          type: psql
           name: database
           property: port
       - key: DB_DATABASE
         fromService:
-          type: pserv
+          type: psql
           name: database
           property: database
       - key: DB_USERNAME
         fromService:
-          type: pserv
+          type: psql
           name: database
           property: user
       - key: DB_PASSWORD
         fromService:
-          type: pserv
+          type: psql
           name: database
           property: password
-  - type: web
+
+  - type: static
     name: react-frontend
-    runtime: node
     rootDir: ./portfolio-app/react-app
     buildCommand: npm install && npm run build
     publishDir: ./dist
@@ -53,8 +53,7 @@ services:
           type: web
           name: laravel-backend
           property: url
-  - type: pserv
+
+  - type: psql
     name: database
-    databaseName: portfolio_db
-    databaseUser: portfolio_user
     plan: free
