--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     envVars:
       - key: APP_URL
         fromService:
-          type: static
+          type: static site
           name: react-frontend
           property: url
       - key: DB_CONNECTION
@@ -42,7 +42,7 @@ services:
           name: database
           property: password
 
-  - type: static
+  - type: static site
     name: react-frontend
     rootDir: ./portfolio-app/react-app
     buildCommand: npm install && npm run build
