--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     envVars:
       - key: APP_URL
         fromService:
-          type: static site
+          type: static
           name: react-frontend
           property: url
       - key: DB_CONNECTION
@@ -42,11 +42,11 @@ services:
           name: database
           property: password
 
-  - type: static site
+  - type: static
     name: react-frontend
     rootDir: ./portfolio-app/react-app
     buildCommand: npm install && npm run build
-    publishDir: ./dist
+    publicPath: ./dist
     envVars:
       - key: VITE_API_URL
         fromService:
