--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     envVars:
       - key: APP_URL
         fromService:
-          type: static
+          type: web
           name: react-frontend
           property: url
       - key: DB_CONNECTION
@@ -42,11 +42,15 @@ services:
           name: database
           property: password
 
-  - type: static
+  - type: web
     name: react-frontend
+    runtime: node
     rootDir: ./portfolio-app/react-app
-    buildCommand: npm install && npm run build
-    publicPath: ./dist
+    buildCommand: |
+      npm install
+      npm run build
+      npm install -g serve
+    startCommand: serve -s dist -l $PORT
     envVars:
       - key: VITE_API_URL
         fromService:
